--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,10 @@ jobs:
           cache: npm
 
       - name: Install dependencies
+        working-directory: ./mini-app
         run: npm install
       - name: Build website
+        working-directory: ./mini-app
         run: npm run build
 
       # Popular action to deploy to GitHub Pages:
@@ -35,7 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
-          publish_dir: ./build
+          publish_dir: ./mini-app/dist
           # The following lines assign commit authorship to the official
           # GH-Actions bot for deploys to `gh-pages` branch:
           # https://github.com/actions/checkout/issues/13#issuecomment-724415212
