--- a/mini-app/package.json
+++ b/mini-app/package.json
@@ -5,7 +5,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "npm run env:dev && vite dev",
+    "dev": "vite dev",
     "build": "vite build",
     "env:dev": "sh ./scripts/generateEnv.dev.sh",
     "env:prod": "sh ./scripts/startup.prod.sh",
